--- a/app/views/designers/new.html.erb
+++ b/app/views/designers/new.html.erb
@@ -16,7 +16,7 @@
   <%= render "form", designer: @designer %>
 </section>
 <script>
-  document.addEventListener("DOMContentLoaded", function () {
+  document.addEventListener("turbo:load", () => {
     let currentStep = 1;
     const steps = document.querySelectorAll(".form-step");
 
