--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -120,22 +120,23 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    padding: 0.5rem 1.25rem;
-    background-color: #f5f5f5;
+    padding: 10px 24px;
+    background-color: $secondary-color;
     border-radius: 9999px;
-    font-size: 0.875rem;
+    font-size: 18px;
     font-weight: 500;
     text-decoration: none;
     color: #202020;
     transition: background 0.3s;
 
     &:hover {
-      background-color: #e5e5e5;
+      background-color: $primary-color;
+      color: $secondary-color;
     }
 
     .od-tag-color {
-      width: 0.75rem;
-      height: 0.75rem;
+      width: 13px;
+      height: 13px;
       border-radius: 9999px;
     }
   }
@@ -147,7 +148,7 @@
   padding: 6rem 1.5rem;
 
   .od-need-container {
-    max-width: 1200px;
+    max-width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -166,12 +167,14 @@
         font-size: 0.875rem;
         text-transform: uppercase;
         letter-spacing: 1px;
-        color: #6b7280;
+        color: $primary-color;
+        font-weight: 700;
       }
 
       h2 {
+        padding: 0;
+        margin: 8px 0;
         font-size: 2.25rem;
-        font-weight: 700;
         color: #202020;
       }
 
@@ -191,8 +194,7 @@
       width: 100%;
 
       .od-rounded-img {
-        border-radius: 1rem;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
         width: 100%;
       }
     }
@@ -221,6 +223,11 @@
     .od-solution-image,
     .od-solution-text {
       width: 100%;
+    }
+
+    .od-solution-image img {
+      padding: 24px 12px;
+      background-color: $secondary-color;
     }
 
     .od-solution-text {
