--- a/app/assets/stylesheets/pages/_reference.scss
+++ b/app/assets/stylesheets/pages/_reference.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/variables';
+@import "abstracts/variables";
 
 .body-show {
   padding-bottom: 50px;
@@ -46,7 +46,7 @@
 }
 
 .header-show.small-height::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -55,10 +55,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: -1;
 }
-.top-img-header{
+.top-img-header {
   object-fit: contain;
 }
-.header-show.small-height .top-img-header{
+.header-show.small-height .top-img-header {
   z-index: -1;
 }
 .header-top {
@@ -141,7 +141,6 @@
   flex-direction: column;
   align-items: center;
   transition: margin-top 0.6s ease-in-out;
-  z-index: -1;
 }
 
 .hidden {
@@ -152,7 +151,6 @@
   display: none;
   position: absolute;
   left: 5vw;
-  width: 100%;
   bottom: 20px;
   padding: 10px;
   z-index: 99;
@@ -179,7 +177,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(255, 255, 255, 0.3);
-  color: #FFF;
+  color: #fff;
   padding: 12px 25px;
   height: 30px;
   border-radius: 5px;
@@ -209,11 +207,14 @@
   transition: background-color 1s ease;
 }
 
-
 .flex-actions {
   display: flex;
   justify-content: space-around;
   margin-top: 32px;
+
+  .circle {
+    z-index: -1;
+  }
 }
 
 .button-circle {
@@ -229,13 +230,8 @@
 
 .next-card {
   margin-left: 20vw;
-  z-index: -1;
 }
 
-
-.horizontal-scroll-section::-webkit-scrollbar {
-  display: none;
-}
 .horizontal-scroll-section {
   overflow: hidden;
   width: 100%;
@@ -243,11 +239,14 @@
 
 .horizontal-wrapper {
   display: flex;
-  gap: 20px;
-   width: max-content;
+  gap: 1rem;
+  overflow-x: auto;
+  scroll-behavior: smooth; /* backup si JS désactivé */
+  padding-right: 24px;
 }
-
-
+// .horizontal-wrapper::-webkit-scrollbar {
+//   display: none; /* masque la scrollbar */
+// }
 .oeuvre-card {
   flex: 0 0 auto;
   width: 380px;
@@ -272,7 +271,7 @@
 }
 
 .oeuvre-card-image::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -291,14 +290,14 @@
 }
 
 .oeuvre-designer {
-  color: #F7F7F7;
+  color: #f7f7f7;
   text-transform: uppercase;
   font-size: 16px;
   margin: 0;
 }
 
 .oeuvre-title {
-  color: #FFF;
+  color: #fff;
   font-size: 30px;
   margin: 5px 0;
 }
@@ -333,7 +332,6 @@
   background: none;
   border: none;
 }
-
 
 // Contributor
 .flex-contributor {
@@ -426,7 +424,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #FFF;
+  color: #fff;
   gap: 32px;
 }
 
@@ -438,7 +436,7 @@
 
 .validation-text {
   font-size: 18px;
-  color: #D9D9D9;
+  color: #d9d9d9;
   width: 40vw;
   text-align: center;
 }
@@ -466,7 +464,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  color: #FFF;
+  color: #fff;
   gap: 32px;
 }
 
@@ -488,7 +486,7 @@
   top: 35px;
 }
 
-@media screen and (min-width:1025px) and (max-width: 1300px) {
+@media screen and (min-width: 1025px) and (max-width: 1300px) {
   .text-show {
     width: 70vw;
   }
@@ -499,7 +497,7 @@
   }
 }
 
-@media screen and (min-width:601px) and (max-width: 1024px) {
+@media screen and (min-width: 601px) and (max-width: 1024px) {
   .body-show {
     padding-bottom: 50px;
   }
@@ -542,7 +540,6 @@
     position: absolute;
     bottom: 40px;
     left: 5vw;
-    width: 100%;
     padding: 10px;
     z-index: 99;
   }
@@ -561,13 +558,10 @@
     scale: 0.8;
   }
 
-
-
   .small-circle {
     width: 12px;
     height: 12px;
   }
-
 
   .flex-actions {
     margin-top: 32px;
@@ -606,7 +600,6 @@
     gap: 15px;
   }
 
-
   // Contributor
   .flex-contributor {
     gap: 32px;
@@ -629,8 +622,9 @@
   }
 }
 
-@media screen and (min-width:426px) and (max-width: 600px) {
-    .flex-back-btn, .flex-right-btn {
+@media screen and (min-width: 426px) and (max-width: 600px) {
+  .flex-back-btn,
+  .flex-right-btn {
     top: 24px;
   }
   .body-show {
@@ -663,7 +657,6 @@
     position: absolute;
     bottom: 10px;
     left: 5vw;
-    width: 100%;
     padding: 10px;
     z-index: 99;
   }
@@ -693,7 +686,6 @@
     width: 12px;
     height: 12px;
   }
-
 
   .flex-actions {
     margin-top: 32px;
@@ -737,7 +729,6 @@
     gap: 15px;
   }
 
-
   // Contributor
   .flex-contributor {
     flex-direction: column;
@@ -766,7 +757,8 @@
 }
 
 @media screen and (max-width: 425px) {
-  .flex-back-btn, .flex-right-btn {
+  .flex-back-btn,
+  .flex-right-btn {
     top: 24px;
   }
   .body-show {
@@ -799,7 +791,6 @@
     position: absolute;
     bottom: 10px;
     left: 5vw;
-    width: 100%;
     padding: 10px;
     z-index: 99;
   }
@@ -830,7 +821,6 @@
     width: 12px;
     height: 12px;
   }
-
 
   .flex-actions {
     margin-top: 32px;
@@ -874,7 +864,6 @@
     gap: 15px;
   }
 
-
   // Contributor
   .flex-contributor {
     flex-direction: column;
@@ -903,7 +892,6 @@
   }
 }
 
-
 body.dark-mode {
   .notion-container {
     background-color: $secondary-color-dark;
@@ -920,9 +908,8 @@ body.dark-mode {
   }
 }
 
-
-#closeImageModal{
-  color: #FFF;
+#closeImageModal {
+  color: #fff;
   position: absolute;
   right: 2.5vw;
   top: 24px;
@@ -930,7 +917,7 @@ body.dark-mode {
   font-size: 48px;
 }
 
-#imageModal{
+#imageModal {
   align-items: center;
   justify-content: center;
 }
